Updated css and index.html

--- a/screen.css
+++ b/screen.css
@@ -1,4 +1,65 @@
 /* Add screen styles below */
-a.active {
-    font-weight: bold;
+h3 {
+    font-size: 16px;
+    margin: 0px;
+    margin-bottom: 0px;
+}
+
+h2 {
+    font-size: 20px;
+    width: 170px;
+    margin: 0px;
+    padding: 0px;
+
+}
+
+.print {
+    padding-right: 48px;
+}
+
+.thumbnail {
+    margin-bottom: 20px;
+}
+
+.flexbox {
+    display: flex;
+    flex-direction: row;
+}
+
+.username {
+    width: 170px;
+    padding-left: 12px;
+    margin-right: 60px;
+    padding-top: 4px;
+}
+
+.user {
+    width: 34px;
+    }
+
+.heart {
+    width: 28px;
+}
+
+.likes {
+    width: 38px;
+    padding-left: 5px;
+    padding-top: 4px;
+    margin-right: 12px;
+    height: 10px;
+}
+
+.eye {
+    width: 20px;
+    margin-top: 5px;
+}
+
+.views {
+    width: 48px;
+    padding-left: 5px;
+    padding-top: 4px;
+}
+
+.details {
+    margin-top: 40px;
 }
