--- a/screen.css
+++ b/screen.css
@@ -1,8 +1,10 @@
 /* Add screen styles below */
+header {
+    margin-top: 30px;
+}
+
 h3 {
-    font-size: 16px;
-    margin: 0px;
-    margin-bottom: 0px;
+    margin-left: 15px;
 }
 
 h2 {
@@ -62,4 +64,9 @@ h2 {
 
 .details {
     margin-top: 40px;
+}
+
+.sort {
+    width: 20px;
+    height: 22px;
 }
